--- a/index.html
+++ b/index.html
@@ -3,13 +3,64 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Polar homes || AirBnB services </title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <title>Polarhomes | Airbnb Services in Syokimau near JKIA</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO Meta Tags -->
+    <meta name="title" content="Polarhomes | Airbnb Services in Syokimau near JKIA">
+    <meta name="description" content="Explore Polarhomes Airbnb services in Syokimau. We offer clean, affordable, and secure accommodations near JKIA and Nairobi Expressway. Ideal for short stays, long stays, and business travelers.">
+    <meta name="keywords" content="Polarhomes Airbnb, Airbnb Syokimau, JKIA stays, Nairobi Expressway rentals, affordable Airbnb Kenya, airport accommodations, short-term rentals JKIA, Airbnb Nairobi Kenya, furnished apartment Nairobi, business travel Syokimau, Polar homes, Airbnb near airport Nairobi, cozy rental Nairobi, secure Airbnb Syokimau">
+    <meta name="author" content="Polarhomes">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourdomain.com/airbnb-services">
+    <meta property="og:title" content="Polarhomes | Airbnb Services in Nairobi near JKIA">
+    <meta property="og:description" content="Discover our Airbnb services at Polarhomes. Safe, stylish, and convenient rentals close to JKIA and Nairobi Expressway in Syokimau.">
+    <meta property="og:image" content="https://yourdomain.com/img/airbnb-cover.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://yourdomain.com/airbnb-services">
+    <meta name="twitter:title" content="Polarhomes | Airbnb Services near JKIA, Nairobi">
+    <meta name="twitter:description" content="Affordable Airbnb services near JKIA, Nairobi Expressway, and Syokimau. Short stay, long stay, and business lodging at Polarhomes.">
+    <meta name="twitter:image" content="https://yourdomain.com/img/airbnb-cover.jpg">
+
+    <!-- Schema.org JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LodgingBusiness",
+      "name": "Polarhomes",
+      "image": "https://yourdomain.com/img/airbnb-cover.jpg",
+      "@id": "https://yourdomain.com",
+      "url": "https://yourdomain.com/airbnb-services",
+      "telephone": "+254712345678",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Syokimau, Nairobi",
+        "addressLocality": "Nairobi",
+        "postalCode": "00100",
+        "addressCountry": "KE"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": -1.3308,
+        "longitude": 36.9274
+      },
+      "description": "Polarhomes offers Airbnb accommodations near JKIA Airport and Nairobi Expressway in Syokimau. Enjoy clean, secure, and fully-furnished short or long-term stays.",
+      "amenityFeature": [
+        { "@type": "LocationFeatureSpecification", "name": "Free WiFi", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Parking", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Airport Proximity", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Fully Furnished", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Secure Premises", "value": true }
+      ]
+    }
+    </script>
 
     <!-- Favicon -->
-    <link href="img/logo.jpg" rel="icon">
+    <link href="img/logo.jpg" rel="icon" type="image/x-icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,6 +82,7 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 </head>
+
 
 <body>
     <div class="container-xxl bg-white p-0">
