--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,61 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Polarhomes || contact Polarhomes </title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <title>Contact Polarhomes | Airbnb Syokimau near JKIA</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO Meta Tags -->
+    <meta name="title" content="Contact Polarhomes | Airbnb Syokimau near JKIA">
+    <meta name="description" content="Get in touch with Polarhomes for secure, affordable, and fully-furnished Airbnb rentals near JKIA, Syokimau, and the Nairobi Expressway. We're here to assist with your booking or inquiries.">
+    <meta name="keywords" content="contact Polarhomes, Airbnb Syokimau contact, JKIA Airbnb host, Polar homes Kenya, Nairobi Airbnb contact, book Airbnb JKIA, reach Polarhomes, Airbnb Kenya customer care, furnished rental support, Airbnb Nairobi Expressway host, Polarhomes phone number">
+    <meta name="author" content="Polarhomes">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourdomain.com/contact">
+    <meta property="og:title" content="Contact Polarhomes | Airbnb Near JKIA & Nairobi Expressway">
+    <meta property="og:description" content="Reach out to Polarhomes for assistance, bookings, or Airbnb inquiries in Nairobi, Syokimau, or near JKIA.">
+    <meta property="og:image" content="https://yourdomain.com/img/logo.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://yourdomain.com/contact">
+    <meta name="twitter:title" content="Contact Polarhomes | Airbnb Near JKIA & Nairobi Expressway">
+    <meta name="twitter:description" content="Contact us today to book or inquire about Airbnb stays in Syokimau and around JKIA.">
+    <meta name="twitter:image" content="https://yourdomain.com/img/logo.jpg">
+
+    <!-- Schema.org JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ContactPage",
+      "name": "Contact Polarhomes",
+      "url": "https://yourdomain.com/contact",
+      "mainEntity": {
+        "@type": "Organization",
+        "name": "Polarhomes",
+        "url": "https://yourdomain.com",
+        "logo": "https://yourdomain.com/img/logo.jpg",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+254712345678",
+          "contactType": "Customer Service",
+          "areaServed": "KE",
+          "availableLanguage": ["English", "Swahili"]
+        },
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Syokimau, Nairobi",
+          "addressLocality": "Nairobi",
+          "postalCode": "00100",
+          "addressCountry": "KE"
+        }
+      }
+    }
+    </script>
 
     <!-- Favicon -->
-    <link href="img/logo.jpg" rel="icon">
+    <link href="img/logo.jpg" rel="icon" type="image/x-icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,6 +79,7 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 </head>
+
 
 <body>
     <div class="container-xxl bg-white p-0">
