--- a/booking.html
+++ b/booking.html
@@ -3,13 +3,65 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Polarhomes || Booking </title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <title>Book Your Stay | Polarhomes Airbnb near JKIA Nairobi</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO Meta Tags -->
+    <meta name="title" content="Book Your Stay | Polarhomes Airbnb near JKIA Nairobi">
+    <meta name="description" content="Book a secure, fully-furnished Airbnb apartment with Polarhomes near JKIA Airport, Syokimau, and Nairobi Expressway. Enjoy a seamless booking process, great rates, and excellent service.">
+    <meta name="keywords" content="book Polarhomes, Airbnb booking JKIA, Airbnb Syokimau, Nairobi Expressway Airbnb, Polar homes booking, Kenya Airbnb rental, reserve Airbnb Nairobi, Polarhomes apartment booking, airport stay Nairobi, Airbnb Kenya booking">
+    <meta name="author" content="Polarhomes">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourdomain.com/booking">
+    <meta property="og:title" content="Book Your Stay | Polarhomes Airbnb near JKIA Nairobi">
+    <meta property="og:description" content="Reserve a beautiful and secure Airbnb apartment near JKIA with Polarhomes. Simple online booking process available now.">
+    <meta property="og:image" content="https://yourdomain.com/img/logo.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://yourdomain.com/booking">
+    <meta name="twitter:title" content="Book Your Stay | Polarhomes Airbnb near JKIA Nairobi">
+    <meta name="twitter:description" content="Seamlessly book your Airbnb apartment with Polarhomes near JKIA, Nairobi Expressway, and Syokimau.">
+    <meta name="twitter:image" content="https://yourdomain.com/img/logo.jpg">
+
+    <!-- Schema.org JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Book Your Stay | Polarhomes",
+      "url": "https://yourdomain.com/booking",
+      "description": "Book fully-furnished Airbnb apartments near JKIA, Nairobi Expressway, and Syokimau with Polarhomes.",
+      "mainEntity": {
+        "@type": "LodgingReservation",
+        "reservationFor": {
+          "@type": "LodgingBusiness",
+          "name": "Polarhomes",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Syokimau",
+            "addressLocality": "Nairobi",
+            "postalCode": "00100",
+            "addressCountry": "KE"
+          }
+        },
+        "underName": {
+          "@type": "Organization",
+          "name": "Polarhomes"
+        },
+        "provider": {
+          "@type": "Organization",
+          "name": "Polarhomes",
+          "url": "https://yourdomain.com"
+        }
+      }
+    }
+    </script>
 
     <!-- Favicon -->
-    <link href="img/logo.jpg" rel="icon">
+    <link href="img/logo.jpg" rel="icon" type="image/x-icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
