--- a/about.html
+++ b/about.html
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
-    <title>Polarhomes || About Us </title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <title>About Us | Polarhomes Airbnb Syokimau near JKIA Nairobi</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO Meta Tags -->
+    <meta name="title" content="About Us | Polarhomes Airbnb Syokimau near JKIA Nairobi">
+    <meta name="description" content="Learn more about Polarhomes – a trusted Airbnb hosting service near JKIA Airport and Syokimau. Discover who we are, our mission, and why travelers trust us for safe, stylish, and convenient stays.">
+    <meta name="keywords" content="About Polarhomes, Airbnb Syokimau, Airbnb near JKIA, Nairobi Airbnb host, Airbnb Kenya, Polarhomes JKIA, Nairobi Expressway stay, short stay Kenya, apartment host Nairobi">
+    <meta name="author" content="Polarhomes">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourdomain.com/about">
+    <meta property="og:title" content="About Us | Polarhomes Airbnb Syokimau near JKIA Nairobi">
+    <meta property="og:description" content="Get to know Polarhomes – Your go-to Airbnb service near JKIA and Nairobi Expressway. Reliable, secure, and stylish homes.">
+    <meta property="og:image" content="https://yourdomain.com/img/logo.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://yourdomain.com/about">
+    <meta name="twitter:title" content="About Us | Polarhomes Airbnb Syokimau near JKIA Nairobi">
+    <meta name="twitter:description" content="Discover why guests choose Polarhomes Airbnb in Syokimau near JKIA. Meet the team and our values.">
+    <meta name="twitter:image" content="https://yourdomain.com/img/logo.jpg">
+
+    <!-- Schema.org JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "AboutPage",
+      "name": "About Us | Polarhomes",
+      "url": "https://yourdomain.com/about",
+      "description": "Polarhomes provides high-quality Airbnb accommodations near JKIA and Syokimau. Learn about our values, team, and commitment to comfort and security.",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Polarhomes",
+        "url": "https://yourdomain.com",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://yourdomain.com/img/logo.jpg"
+        }
+      }
+    }
+    </script>
 
     <!-- Favicon -->
-    <link href="img/logo.jpg" rel="icon">
+    <link href="img/logo.jpg" rel="icon" type="image/x-icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,6 +68,7 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 </head>
+
 
 <body>
     <div class="container-xxl bg-white p-0">
