--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <div class="p-3" style="max-width: 700px;">
                         <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Scenic Locations</h6>
-                        <h1 class="display-3 text-white mb-4 animated slideInDown">Stay Near Nairobi’s Best Attractions</h1>
+                        <h1 class="display-3 text-white mb-4 animated slideInDown">Stay Near Nairobi’s Best Attractions like jkia and express way</h1>
                         <a href="contact" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Contact Us</a>
                         <a href="booking" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Reserve Your Stay</a>
                     </div>
@@ -217,7 +217,7 @@
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <div class="p-3" style="max-width: 700px;">
                         <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Elegant Interiors</h6>
-                        <h1 class="display-3 text-white mb-4 animated slideInDown">Enjoy a Stylish and Cozy Experience</h1>
+                        <h1 class="display-3 text-white mb-4 animated slideInDown">Enjoy a Stylish and Cozy Experience near the airport</h1>
                         <a href="service" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">View Services</a>
                         <a href="booking" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Book Your Stay</a>
                     </div>
@@ -228,7 +228,7 @@
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <div class="p-3" style="max-width: 700px;">
                         <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Premium Comfort</h6>
-                        <h1 class="display-3 text-white mb-4 animated slideInDown">Modern Amenities for a Perfect Stay</h1>
+                        <h1 class="display-3 text-white mb-4 animated slideInDown">Modern Amenities for a Perfect Stay just next to express way</h1>
                         <a href="room" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">View Amenities</a>
                         <a href="booking" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Check Availability</a>
                     </div>
@@ -313,7 +313,7 @@
                 <h1 class="mb-4">Discover <span class="text-primary text-uppercase">Unforgettable Stays</span></h1>
                <p class="mb-4">
                     Welcome to <strong>Polarhomes</strong>, your gateway to luxurious and memorable stays in Nairobi, Kenya. 
-                    Nestled along the Expressway in Syokimau, we offer a seamless blend of comfort, convenience, and adventure.
+                    Nestled along the Expressway, near JKIA in Syokimau, we offer a seamless blend of comfort, convenience, and adventure.
                     Whether you're looking for a relaxing getaway, a business trip, or a fun family vacation, we provide a 
                     curated selection of premium accommodations tailored to your needs.
                 </p>
