--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourdomain.com/airbnb-services">
+    <meta property="og:url" content="https://www.polarhomes.org/">
     <meta property="og:title" content="Polarhomes | Airbnb Services in Nairobi near JKIA">
     <meta property="og:description" content="Discover our Airbnb services at Polarhomes. Safe, stylish, and convenient rentals close to JKIA and Nairobi Expressway in Syokimau.">
-    <meta property="og:image" content="https://yourdomain.com/img/airbnb-cover.jpg">
+    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://yourdomain.com/airbnb-services">
     <meta name="twitter:title" content="Polarhomes | Airbnb Services near JKIA, Nairobi">
     <meta name="twitter:description" content="Affordable Airbnb services near JKIA, Nairobi Expressway, and Syokimau. Short stay, long stay, and business lodging at Polarhomes.">
-    <meta name="twitter:image" content="https://yourdomain.com/img/airbnb-cover.jpg">
+    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Schema.org JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -32,9 +32,9 @@
       "@context": "https://schema.org",
       "@type": "LodgingBusiness",
       "name": "Polarhomes",
-      "image": "https://yourdomain.com/img/airbnb-cover.jpg",
-      "@id": "https://yourdomain.com",
-      "url": "https://yourdomain.com/airbnb-services",
+      "image": "https://www.polarhomes.org/img/logo.jpg",
+      "@id": "https://www.polarhomes.org/",
+      "url": "https://www.polarhomes.org/",
       "telephone": "+254712345678",
       "address": {
         "@type": "PostalAddress",
