--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Polarhomes | Airbnb Services in Syokimau near JKIA</title>
+    <title>Polar homes | Airbnb Services in Syokimau near JKIA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <meta name="title" content="Polarhomes | Airbnb Services in Syokimau near JKIA">
+    <meta name="title" content="Polar homes | Airbnb Services in Syokimau near JKIA">
     <meta name="description" content="Explore Polarhomes Airbnb services in Syokimau. We offer clean, affordable, and secure accommodations near JKIA and Nairobi Expressway. Ideal for short stays, long stays, and business travelers.">
-    <meta name="keywords" content="Polarhomes Airbnb, Airbnb Syokimau, JKIA stays, Nairobi Expressway rentals, affordable Airbnb Kenya, airport accommodations, short-term rentals JKIA, Airbnb Nairobi Kenya, furnished apartment Nairobi, business travel Syokimau, Polar homes, Airbnb near airport Nairobi, cozy rental Nairobi, secure Airbnb Syokimau">
-    <meta name="author" content="Polarhomes">
+    <meta name="keywords" content="Polar homes Airbnb, Airbnb Syokimau, JKIA stays, Nairobi Expressway rentals, affordable Airbnb Kenya, airport accommodations, short-term rentals JKIA, Airbnb Nairobi Kenya, furnished apartment Nairobi, business travel Syokimau, Polar homes, Airbnb near airport Nairobi, cozy rental Nairobi, secure Airbnb Syokimau">
+    <meta name="author" content="Polar homes">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -21,7 +21,7 @@
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://yourdomain.com/airbnb-services">
+    <meta name="twitter:url" content="https://www.polarhomes.org/">
     <meta name="twitter:title" content="Polarhomes | Airbnb Services near JKIA, Nairobi">
     <meta name="twitter:description" content="Affordable Airbnb services near JKIA, Nairobi Expressway, and Syokimau. Short stay, long stay, and business lodging at Polarhomes.">
     <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
@@ -31,11 +31,11 @@
     {
       "@context": "https://schema.org",
       "@type": "LodgingBusiness",
-      "name": "Polarhomes",
+      "name": "Polar homes",
       "image": "https://www.polarhomes.org/img/logo.jpg",
       "@id": "https://www.polarhomes.org/",
       "url": "https://www.polarhomes.org/",
-      "telephone": "+254712345678",
+      "telephone": "+254 723 225 791",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "Syokimau, Nairobi",
