--- a/about.html
+++ b/about.html
@@ -13,17 +13,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourdomain.com/about">
+    <meta property="og:url" content="https://www.polarhomes.org/about">
     <meta property="og:title" content="About Us | Polarhomes Airbnb Syokimau near JKIA Nairobi">
     <meta property="og:description" content="Get to know Polarhomes – Your go-to Airbnb service near JKIA and Nairobi Expressway. Reliable, secure, and stylish homes.">
-    <meta property="og:image" content="https://yourdomain.com/img/logo.jpg">
+    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://yourdomain.com/about">
+    <meta name="twitter:url" content="https://www.polarhomes.org/about">
     <meta name="twitter:title" content="About Us | Polarhomes Airbnb Syokimau near JKIA Nairobi">
     <meta name="twitter:description" content="Discover why guests choose Polarhomes Airbnb in Syokimau near JKIA. Meet the team and our values.">
-    <meta name="twitter:image" content="https://yourdomain.com/img/logo.jpg">
+    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Schema.org JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -31,15 +31,15 @@
       "@context": "https://schema.org",
       "@type": "AboutPage",
       "name": "About Us | Polarhomes",
-      "url": "https://yourdomain.com/about",
+      "url": "https://www.polarhomes.org//about",
       "description": "Polarhomes provides high-quality Airbnb accommodations near JKIA and Syokimau. Learn about our values, team, and commitment to comfort and security.",
       "publisher": {
         "@type": "Organization",
         "name": "Polarhomes",
-        "url": "https://yourdomain.com",
+        "url": "https://www.polarhomes.org/",
         "logo": {
           "@type": "ImageObject",
-          "url": "https://yourdomain.com/img/logo.jpg"
+          "url": "https://www.polarhomes.org/img/logo.jpg"
         }
       }
     }
