--- a/booking.html
+++ b/booking.html
@@ -17,14 +17,14 @@
     <meta property="og:url" content="https://yourdomain.com/booking">
     <meta property="og:title" content="Book Your Stay | Polarhomes Airbnb near JKIA Nairobi">
     <meta property="og:description" content="Reserve a beautiful and secure Airbnb apartment near JKIA with Polarhomes. Simple online booking process available now.">
-    <meta property="og:image" content="https://yourdomain.com/img/logo.jpg">
+    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://yourdomain.com/booking">
+    <meta name="twitter:url" content="https://www.polarhomes.org/booking">
     <meta name="twitter:title" content="Book Your Stay | Polarhomes Airbnb near JKIA Nairobi">
     <meta name="twitter:description" content="Seamlessly book your Airbnb apartment with Polarhomes near JKIA, Nairobi Expressway, and Syokimau.">
-    <meta name="twitter:image" content="https://yourdomain.com/img/logo.jpg">
+    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Schema.org JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -32,7 +32,7 @@
       "@context": "https://schema.org",
       "@type": "WebPage",
       "name": "Book Your Stay | Polarhomes",
-      "url": "https://yourdomain.com/booking",
+      "url": "https://www.polarhomes.org/booking",
       "description": "Book fully-furnished Airbnb apartments near JKIA, Nairobi Expressway, and Syokimau with Polarhomes.",
       "mainEntity": {
         "@type": "LodgingReservation",
