--- a/contact.html
+++ b/contact.html
@@ -14,17 +14,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourdomain.com/contact">
+    <meta property="og:url" content="https://www.polarhomes.org/contact">
     <meta property="og:title" content="Contact Polarhomes | Airbnb Near JKIA & Nairobi Expressway">
     <meta property="og:description" content="Reach out to Polarhomes for assistance, bookings, or Airbnb inquiries in Nairobi, Syokimau, or near JKIA.">
-    <meta property="og:image" content="https://yourdomain.com/img/logo.jpg">
+    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://yourdomain.com/contact">
+    <meta name="twitter:url" content="https://www.polarhomes.org/contact">
     <meta name="twitter:title" content="Contact Polarhomes | Airbnb Near JKIA & Nairobi Expressway">
     <meta name="twitter:description" content="Contact us today to book or inquire about Airbnb stays in Syokimau and around JKIA.">
-    <meta name="twitter:image" content="https://yourdomain.com/img/logo.jpg">
+    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Schema.org JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -32,15 +32,15 @@
       "@context": "https://schema.org",
       "@type": "ContactPage",
       "name": "Contact Polarhomes",
-      "url": "https://yourdomain.com/contact",
+      "url": "https://www.polarhomes.org/contact",
       "mainEntity": {
         "@type": "Organization",
         "name": "Polarhomes",
-        "url": "https://yourdomain.com",
-        "logo": "https://yourdomain.com/img/logo.jpg",
+        "url": "https://www.polarhomes.org/",
+        "logo": "https://www.polarhomes.org/img/logo.jpg",
         "contactPoint": {
           "@type": "ContactPoint",
-          "telephone": "+254712345678",
+          "telephone": "+254 723 225 791",
           "contactType": "Customer Service",
           "areaServed": "KE",
           "availableLanguage": ["English", "Swahili"]
