--- a/booking.html
+++ b/booking.html
@@ -14,7 +14,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourdomain.com/booking">
+    <meta property="og:url" content="https://www.polarhomes.org/booking">
     <meta property="og:title" content="Book Your Stay | Polarhomes Airbnb near JKIA Nairobi">
     <meta property="og:description" content="Reserve a beautiful and secure Airbnb apartment near JKIA with Polarhomes. Simple online booking process available now.">
     <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
@@ -54,7 +54,7 @@
         "provider": {
           "@type": "Organization",
           "name": "Polarhomes",
-          "url": "https://yourdomain.com"
+          "url": "https://www.polarhomes.org"
         }
       }
     }
