--- a/room-details.html
+++ b/room-details.html
@@ -14,17 +14,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourdomain.com/room-details">
+    <meta property="og:url" content="https://www.polarhomes.org/room-details">
     <meta property="og:title" content="Polarhomes | Room Details | Cozy Airbnb Stay near JKIA">
     <meta property="og:description" content="Get all the details on our comfortable and secure Airbnb rooms at Polarhomes. Located in Syokimau near JKIA and Nairobi Expressway. View photos, amenities, and book now.">
-    <meta property="og:image" content="https://yourdomain.com/images/room-preview.jpg">
+    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://yourdomain.com/room-details">
+    <meta name="twitter:url" content="https://www.polarhomes.org/room-details">
     <meta name="twitter:title" content="Polarhomes | Room Details | Airbnb JKIA Nairobi">
     <meta name="twitter:description" content="See full details of Polarhomes Airbnb rooms near JKIA and Nairobi Expressway. Affordable, clean, and fully equipped stays in Syokimau.">
-    <meta name="twitter:image" content="https://yourdomain.com/images/room-preview.jpg">
+    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Favicon -->
     <link href="img/logo.jpg" rel="icon" type="image/x-icon">
