--- a/room.html
+++ b/room.html
@@ -11,17 +11,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourdomain.com/rooms">
+    <meta property="og:url" content="https://www.polarhomes.org/room">
     <meta property="og:title" content="Polarhomes | Cozy Airbnb Rooms Near JKIA, Nairobi">
     <meta property="og:description" content="Affordable short stay apartments and Airbnbs in Syokimau, Nairobi, near JKIA and the Expressway. Clean, secure, and well-furnished rooms for travelers.">
-    <meta property="og:image" content="https://yourdomain.com/images/preview.jpg">
+    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://yourdomain.com/rooms">
+    <meta name="twitter:url" content="https://www.polarhomes.org/room">
     <meta name="twitter:title" content="Polarhomes | Cozy Airbnb Rooms Near JKIA, Nairobi">
     <meta name="twitter:description" content="Affordable short stay apartments and Airbnbs in Syokimau, Nairobi, near JKIA and the Expressway. Clean, secure, and well-furnished rooms for travelers.">
-    <meta name="twitter:image" content="https://yourdomain.com/images/preview.jpg">
+    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Schema.org JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -29,7 +29,7 @@
       "@context": "https://schema.org",
       "@type": "LodgingBusiness",
       "name": "Polarhomes",
-      "image": "https://yourdomain.com/images/preview.jpg",
+      "image": "https://www.polarhomes.org/img/logo.jpg",
       "description": "Polarhomes offers well-furnished, secure short-stay apartments and Airbnb rooms in Syokimau, near JKIA and the Nairobi Expressway.",
       "address": {
         "@type": "PostalAddress",
@@ -42,8 +42,8 @@
         "latitude": -1.36202,
         "longitude": 36.95185
       },
-      "url": "https://yourdomain.com/rooms",
-      "telephone": "+254712345678",
+      "url": "https://www.polarhomes.org/room",
+      "telephone": "+254 723 225 791",
       "priceRange": "$$",
       "amenityFeature": [
         { "@type": "LocationFeatureSpecification", "name": "Free Wi-Fi", "value": true },
