--- a/service.html
+++ b/service.html
@@ -14,17 +14,17 @@
 
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourdomain.com/rooms">
+    <meta property="og:url" content="https://www.polarhomes.org/service">
     <meta property="og:title" content="Polarhomes | Cozy Airbnb Rooms Near JKIA, Nairobi">
     <meta property="og:description" content="Affordable, well-furnished rooms in Syokimau near JKIA airport and the Nairobi Expressway. Clean, safe, and ideal for short-term stays.">
-    <meta property="og:image" content="https://yourdomain.com/images/preview.jpg">
+    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://yourdomain.com/rooms">
+    <meta name="twitter:url" content="https://www.polarhomes.org/service">
     <meta name="twitter:title" content="Polarhomes | Cozy Airbnb Rooms Near JKIA, Nairobi">
     <meta name="twitter:description" content="Affordable, stylish apartments and rooms in Syokimau near JKIA. Perfect for travelers and short stays.">
-    <meta name="twitter:image" content="https://yourdomain.com/images/preview.jpg">
+    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Schema.org JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -32,7 +32,7 @@
       "@context": "https://schema.org",
       "@type": "LodgingBusiness",
       "name": "Polarhomes",
-      "image": "https://yourdomain.com/images/preview.jpg",
+      "image": "https://www.polarhomes.org/img/logo.jpg",
       "description": "Polarhomes offers clean, safe, and affordable Airbnb rooms in Syokimau, near JKIA and Nairobi Expressway.",
       "address": {
         "@type": "PostalAddress",
@@ -45,8 +45,8 @@
         "latitude": -1.36202,
         "longitude": 36.95185
       },
-      "url": "https://yourdomain.com/rooms",
-      "telephone": "+254712345678",
+      "url": "https://www.polarhomes.org/service",
+      "telephone": "+254 723 225 791",
       "priceRange": "$$",
       "amenityFeature": [
         { "@type": "LocationFeatureSpecification", "name": "Free Wi-Fi", "value": true },
