--- a/testimonial.html
+++ b/testimonial.html
@@ -14,17 +14,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourdomain.com/reviews">
+    <meta property="og:url" content="https://www.polarhomes.org/testimonial">
     <meta property="og:title" content="Polarhomes | Trusted Guest Reviews near JKIA & Nairobi Expressway">
     <meta property="og:description" content="Discover why travelers love Polarhomes! Authentic reviews from happy Airbnb guests staying near JKIA Airport and Nairobi Expressway.">
-    <meta property="og:image" content="https://yourdomain.com/images/review-preview.jpg">
+    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://yourdomain.com/reviews">
+    <meta name="twitter:url" content="https://www.polarhomes.org/testimonial">
     <meta name="twitter:title" content="Polarhomes | Airbnb Testimonials & Guest Experiences in Nairobi">
     <meta name="twitter:description" content="Trusted by hundreds of guests – read genuine reviews about Polarhomes Airbnb rooms near JKIA and Nairobi Expressway. Clean, secure, and cozy.">
-    <meta name="twitter:image" content="https://yourdomain.com/images/review-preview.jpg">
+    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Favicon -->
     <link rel="icon" href="img/logo.jpg" type="image/x-icon">
