--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Learn more about Polarhomes – a trusted Airbnb hosting service near JKIA Airport and Syokimau. Discover who we are, our mission, and why travelers trust us for safe, stylish, and convenient stays.">
     <meta name="keywords" content="About Polarhomes, Airbnb Syokimau, Airbnb near JKIA, Nairobi Airbnb host, Airbnb Kenya, Polarhomes JKIA, Nairobi Expressway stay, short stay Kenya, apartment host Nairobi">
     <meta name="author" content="Polarhomes">
+    <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
