--- a/booking.html
+++ b/booking.html
@@ -11,6 +11,7 @@
     <meta name="description" content="Book a secure, fully-furnished Airbnb apartment with Polarhomes near JKIA Airport, Syokimau, and Nairobi Expressway. Enjoy a seamless booking process, great rates, and excellent service.">
     <meta name="keywords" content="book Polarhomes, Airbnb booking JKIA, Airbnb Syokimau, Nairobi Expressway Airbnb, Polar homes booking, Kenya Airbnb rental, reserve Airbnb Nairobi, Polarhomes apartment booking, airport stay Nairobi, Airbnb Kenya booking">
     <meta name="author" content="Polarhomes">
+    <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
