--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="description" content="Explore Polarhomes Airbnb services in Syokimau. We offer clean, affordable, and secure accommodations near JKIA and Nairobi Expressway. Ideal for short stays, long stays, and business travelers.">
     <meta name="keywords" content="Polar homes Airbnb, Airbnb Syokimau, JKIA stays, Nairobi Expressway rentals, affordable Airbnb Kenya, airport accommodations, short-term rentals JKIA, Airbnb Nairobi Kenya, furnished apartment Nairobi, business travel Syokimau, Polar homes, Airbnb near airport Nairobi, cozy rental Nairobi, secure Airbnb Syokimau">
     <meta name="author" content="Polar homes">
+	<meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
