--- a/room-details.html
+++ b/room-details.html
@@ -11,6 +11,7 @@
     <meta name="description" content="Explore detailed information about Polarhomes Airbnb rooms near JKIA Airport and Nairobi Expressway. See features, amenities, prices, and photos of our cozy, secure stays in Syokimau.">
     <meta name="keywords" content="Polarhomes room details, Airbnb room near JKIA, Syokimau stays, Nairobi short stays, furnished apartment Nairobi, secure Airbnb Syokimau, Nairobi airport room, Polarhomes listing, Syokimau guesthouse, rooms with Wi-Fi JKIA, short term rental Syokimau, budget Airbnb Nairobi, Nairobi Expressway room rental, stylish Airbnb Kenya, Polarhomes amenities, Polarhomes accommodation">
     <meta name="author" content="Polarhomes">
+    <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
