--- a/room.html
+++ b/room.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Book cozy, affordable rooms near JKIA airport in Syokimau. Polarhomes offers secure, stylish Airbnbs along the Nairobi Expressway, perfect for travelers & short stays.">
     <meta name="keywords" content="polarhomes, airbnb near JKIA, rooms near JKIA, syokimau airbnb, Nairobi expressway accommodation, short stay Nairobi, inedesign Makumbi Park, apartments JKIA, JKIA rooms, airbnb syokimau, polarhomes syokimau, near airport nairobi, airbnb near expressway">
     <meta name="author" content="Polarhomes">
+	<meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
