--- a/service.html
+++ b/service.html
@@ -11,6 +11,7 @@
     <meta name="description" content="Book cozy, affordable Airbnb rooms in Syokimau near JKIA and Nairobi Expressway. Safe, stylish, and perfect for short stays.">
     <meta name="keywords" content="polarhomes, Airbnb JKIA, Syokimau Airbnb, rooms near Nairobi Expressway, short stay Nairobi, Makumbi Park apartments, airbnb syokimau, affordable airbnb Nairobi, JKIA lodging, Nairobi airport stay">
     <meta name="author" content="Polarhomes">
+    <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website">
