--- a/testimonial.html
+++ b/testimonial.html
@@ -11,6 +11,7 @@
     <meta name="description" content="Read real testimonials and honest guest reviews about Polarhomes Airbnb stays near JKIA airport and Nairobi Expressway. See why guests love our clean, secure, and stylish accommodations.">
     <meta name="keywords" content="Polarhomes reviews, Polarhomes testimonials, Airbnb reviews JKIA, guest reviews Syokimau, Nairobi Airbnb feedback, Nairobi airport lodging reviews, short stay reviews Syokimau, Airbnb Kenya experiences, Polarhomes customer experiences, trusted Airbnb Nairobi, Airbnb near Nairobi Expressway, clean Airbnb Syokimau, safe Airbnb Nairobi">
     <meta name="author" content="Polarhomes">
+    <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
