--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
         </div>
         <div class="row g-4">
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                <a class="service-item rounded">
+                <a class="service-item rounded" href="service-detail.html?service=rooms">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-hotel fa-2x text-primary"></i>
@@ -600,7 +600,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-                <a class="service-item rounded">
+                <a class="service-item rounded" href="service-detail.html?service=rooms">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-utensils fa-2x text-primary"></i>
@@ -611,7 +611,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                <a class="service-item rounded">
+                <a class="service-item rounded" href="service-detail.html?service=rooms">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-spa fa-2x text-primary"></i>
@@ -622,7 +622,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-                <a class="service-item rounded">
+                <a class="service-item rounded" href="service-detail.html?service=rooms">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-swimmer fa-2x text-primary"></i>
@@ -633,7 +633,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                <a class="service-item rounded">
+                <a class="service-item rounded" href="service-detail.html?service=rooms">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-glass-cheers fa-2x text-primary"></i>
@@ -644,7 +644,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                <a class="service-item rounded">
+                <a class="service-item rounded" href="service-detail.html?service=rooms">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-dumbbell fa-2x text-primary"></i>
@@ -739,7 +739,7 @@
                 <h6 class="text-primary text-uppercase mb-3">Contact</h6>
                 <p class="mb-2"><i class="fa fa-map-marker-alt me-2"></i>Kenya, Nairobi, Syokimau</p>
                 <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+254 723 225 791</p>
-                <p class="mb-2"><i class="fa fa-envelope me-2"></i>polarhomes.com</p>
+                <p class="mb-2"><i class="fa fa-envelope me-2"></i>lindahmiriza@gmail.com</p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-outline-light btn-social me-1" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-light btn-social me-1" href="#"><i class="fab fa-facebook-f"></i></a>
