--- a/service-detail.html
+++ b/service-detail.html
@@ -1,11 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Service Details - PolarHomes</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <title>Polarhomes | Room Details | Airbnb in Syokimau near JKIA</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO Meta Tags -->
+    <meta name="title" content="Polarhomes | Room Details | Airbnb near JKIA, Nairobi Expressway">
+    <meta name="description" content="Explore detailed information about Polarhomes Airbnb rooms near JKIA Airport and Nairobi Expressway. See features, amenities, prices, and photos of our cozy, secure stays in Syokimau.">
+    <meta name="keywords" content="Polarhomes room details, Airbnb room near JKIA, Syokimau stays, Nairobi short stays, furnished apartment Nairobi, secure Airbnb Syokimau, Nairobi airport room, Polarhomes listing, Syokimau guesthouse, rooms with Wi-Fi JKIA, short term rental Syokimau, budget Airbnb Nairobi, Nairobi Expressway room rental, stylish Airbnb Kenya, Polarhomes amenities, Polarhomes accommodation">
+    <meta name="author" content="Polarhomes">
+    <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.polarhomes.org/room-details">
+    <meta property="og:title" content="Polarhomes | Room Details | Cozy Airbnb Stay near JKIA">
+    <meta property="og:description" content="Get all the details on our comfortable and secure Airbnb rooms at Polarhomes. Located in Syokimau near JKIA and Nairobi Expressway. View photos, amenities, and book now.">
+    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://www.polarhomes.org/room-details">
+    <meta name="twitter:title" content="Polarhomes | Room Details | Airbnb JKIA Nairobi">
+    <meta name="twitter:description" content="See full details of Polarhomes Airbnb rooms near JKIA and Nairobi Expressway. Affordable, clean, and fully equipped stays in Syokimau.">
+    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
+
+    <!-- Favicon -->
+    <link href="img/logo.jpg" rel="icon" type="image/x-icon">
+
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Icon Font Stylesheets -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+
+    <!-- Libraries Stylesheets -->
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Template Stylesheet -->
+    <link href="css/style.css" rel="stylesheet">
 </head>
+
+<body>
+    <div class="container-xxl bg-white p-0">
+        <!-- Spinner Start -->
+        <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+            <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
+        <!-- Spinner End -->
+
+       <!-- Header Start -->
+<div class="container-fluid bg-dark px-0">
+    <div class="row gx-0 align-items-center">
+        <!-- Logo & Brand Name -->
+        <div class="col-lg-3 bg-dark d-none d-lg-flex align-items-center justify-content-start px-4">
+            <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
+            <h1 class="m-0 fancy-text ms-2">PH</h1>
+        </div>
+
+             <!-- Contact & Social Links -->
+        <div class="col-lg-9">
+            <div class="row gx-0 bg-white d-none d-lg-flex">
+                <div class="col-lg-7 px-5 text-start">
+                    <div class="h-100 d-inline-flex align-items-center py-2 me-4">
+                        <i class="fa fa-envelope text-primary me-2"></i>
+                        <p class="mb-0">lindahmiriza@gmail.com </p>
+                    </div>
+                    <div class="h-100 d-inline-flex align-items-center py-2">
+                        <i class="fa fa-phone-alt text-primary me-2"></i>
+                        <p class="mb-0">+254 723 225 791</p>
+                    </div>
+                </div>
+                <div class="col-lg-5 px-5 text-end">
+                    <div class="d-inline-flex align-items-center py-2">
+                        <a class="me-3" href=""><i class="fab fa-facebook-f"></i></a>
+                        <a class="me-3" href=""><i class="fab fa-twitter"></i></a>
+                        <a class="me-3" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a class="me-3" href=""><i class="fab fa-instagram"></i></a>
+                        <a class="" href=""><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+            </div>
+            
+          <!-- Navbar -->
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark p-3 p-lg-0">
+    <!-- Mobile & Tablet Logo (Hidden on large screens) -->
+    <a href="index" class="navbar-brand d-flex align-items-center d-lg-none">
+        <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
+        <h1 class="m-0 fancy-text ms-2"></h1>
+    </a>
+
+    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
+        <div class="navbar-nav py-0">
+            <a href="index" class="nav-item nav-link active">Home</a>
+            <a href="about" class="nav-item nav-link">About</a>
+            <a href="service" class="nav-item nav-link">Services</a>
+            <a href="room" class="nav-item nav-link">Rooms</a>
+            <div class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                <div class="dropdown-menu rounded-0 m-0">
+                    <a href="booking" class="dropdown-item">Booking</a>
+                    <a href="testimonial" class="dropdown-item">Testimonial</a>
+                </div>
+            </div>
+            <a href="contact" class="nav-item nav-link">Contact</a>
+        </div>
+    </div>
+</nav>
+
+<!-- Styles -->
+<style>
+        .logo-img {
+        width: 90px; /* Adjust size as needed */
+        height: 70px;
+    }
+
+    .fancy-text {
+        font-size: 2rem;
+        font-weight: bold;
+        color: gold; /* Luxurious golden color */
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        font-family: "Cinzel", serif;
+        text-shadow: 2px 2px 8px rgba(255, 215, 0, 0.8);
+    }
+</style>
+
+        </div>
+    </div>
+</div>
+<!-- Header End -->
+
+
+        <!-- Page Header Start -->
+        <div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/carousel-1.jpg);">
+            <div class="container-fluid page-header-inner py-5">
+                <div class="container text-center pb-5">
+                    <h1 class="display-3 text-white mb-3 animated slideInDown">Room Details</h1>
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb justify-content-center text-uppercase">
+                            <li class="breadcrumb-item"><a href="#">Home</a></li>
+                            <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                            <li class="breadcrumb-item text-white active" aria-current="page">Room details</li>
+                        </ol>
+                    </nav>
+                </div>
+            </div>
+        </div>
+        <!-- Page Header End -->
+      
 <body>
   <div class="container">
     <h1 id="service-title"></h1>
