--- a/service-detail.html
+++ b/service-detail.html
@@ -164,7 +164,67 @@
             </div>
         </div>
         <!-- Page Header End -->
-      
+        <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f8f9fa;
+    }
+    .carousel-inner img {
+      height: 500px;
+      object-fit: cover;
+    }
+    .features i {
+      color: #ff6600;
+    }
+  </style>
+
+        <!-- Booking Start -->
+<div class="container-fluid booking pb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container">
+        <form action="https://formspree.io/f/xkgryeaa" method="POST">
+            <div class="bg-white shadow" style="padding: 35px;">
+                <div class="row g-2">
+                    <div class="col-md-10">
+                        <div class="row g-2">
+                            <div class="col-md-3">
+                                <div class="date" id="date1" data-target-input="nearest">
+                                    <input type="text" class="form-control datetimepicker-input"
+                                        name="checkin"
+                                        placeholder="Check in" data-target="#date1" data-toggle="datetimepicker" />
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="date" id="date2" data-target-input="nearest">
+                                    <input type="text" class="form-control datetimepicker-input"
+                                        name="checkout"
+                                        placeholder="Check out" data-target="#date2" data-toggle="datetimepicker"/>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <select class="form-select" name="adults">
+                                    <option selected disabled>Adult</option>
+                                    <option value="1">1 Person</option>
+                                    <option value="2">2 People</option>
+                                </select>
+                            </div>
+                            <div class="col-md-3">
+                                <select class="form-select" name="children">
+                                    <option selected disabled>Child</option>
+                                    <option value="1">1 Child</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <button class="btn btn-primary w-100" type="submit">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+<!-- Booking End -->
+
 <body>
   <div class="container">
     <h1 id="service-title"></h1>
@@ -176,5 +236,82 @@
   </div>
 
   <script src="service-detail.js"></script>
+<!-- Footer Start -->
+<div class="container-fluid bg-dark text-light footer wow fadeIn pt-4 pb-2 mt-5" data-wow-delay="0.1s">
+    <div class="container">
+        <div class="row g-4">
+            <!-- Logo and About -->
+            <div class="col-md-6 col-lg-4">
+                <a href="index">
+                    <img src="img/logo.jpg" alt="Polarhomes Logo" class="img-fluid mb-3" style="max-width: 120px;">
+                </a>
+                <p class="mb-2">
+                    Welcome to <strong>Polar homes</strong>, your gateway to luxurious and memorable stays in Nairobi, Kenya.
+                </p>
+            </div>
+
+            <!-- Contact Info -->
+            <div class="col-md-6 col-lg-4">
+                <h6 class="text-primary text-uppercase mb-3">Contact</h6>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-2"></i>Kenya, Nairobi, Syokimau</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+254 723 225 791</p>
+                <p class="mb-2"><i class="fa fa-envelope me-2"></i>polarhomes.com</p>
+                <div class="d-flex pt-2">
+                    <a class="btn btn-outline-light btn-social me-1" href="#"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-outline-light btn-social me-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light btn-social me-1" href="#"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+
+            <!-- Services -->
+            <div class="col-lg-4 col-md-12">
+                <h6 class="text-primary text-uppercase mb-3">Services</h6>
+                <div class="d-flex flex-column">
+                    <a class="btn btn-link text-light text-start p-0 mb-1" href="service">Food & Restaurant</a>
+                    <a class="btn btn-link text-light text-start p-0 mb-1" href="service">Spa & Fitness</a>
+                    <a class="btn btn-link text-light text-start p-0 mb-1" href="service">Sports & Gaming</a>
+                    <a class="btn btn-link text-light text-start p-0 mb-1" href="service">Event & Party</a>
+                    <a class="btn btn-link text-light text-start p-0" href="service">GYM & Yoga</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer Bottom -->
+    <div class="container border-top mt-3 pt-2">
+        <div class="row align-items-center">
+            <div class="col-md-6 text-center text-md-start small">
+                &copy; <a class="text-decoration-none text-light" href="#">Polar homes</a>, All Rights Reserved. 
+                Designed by <a class="text-decoration-none text-primary" href="https://antocapteknologies.com">Antocap Teknologies</a>
+            </div>
+            <div class="col-md-6 text-center text-md-end small">
+                <a class="text-light me-3" href="index">Home</a>
+                <a class="text-light" href="contact">Help</a>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Footer End -->
+
+        <!-- Back to Top -->
+        <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    </div>
+
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/counterup/counterup.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="lib/tempusdominus/js/moment.min.js"></script>
+    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
+    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
 </body>
+
 </html>
